--- a/client/src/app/components/plato-form/plato-form.component.html
+++ b/client/src/app/components/plato-form/plato-form.component.html
@@ -2,7 +2,7 @@
 <div class="row">
     <div class="col-sm-4 offset-sm-4">
       <div class="card card-body">
-        <form (submit)="submitProduct">
+        <form (submit)="submitPlato()">
           <div class="form-group">
             <input type="text" name="nombre" [(ngModel)]="plato.nombre" class="form-control" placeholder="Nombre" autofocus>
           </div>
