--- a/client/src/app/components/plato-form/plato-form.component.html
+++ b/client/src/app/components/plato-form/plato-form.component.html
@@ -10,7 +10,7 @@
             <input type="text" name="price" [(ngModel)]="plato.precio" class="form-control" placeholder="Precio">
           </div>
           <button type="submit" class="btn btn-primary btn-block">
-            Save
+            Guardar
           </button>
         </form>
       </div>
