--- a/client/src/app/components/plato-list/plato-list.component.html
+++ b/client/src/app/components/plato-list/plato-list.component.html
@@ -1,1 +1,19 @@
-<p>plato-list works!</p>
+es (32 sloc)  800 Bytes
+   
+<div *ngFor="let plato of platos" class="card card-body mb-2">
+  <div class="row">
+    <div class="col-md-8">
+      <ul>
+        <li>
+          id: {{plato._id}}
+        </li>
+        <li>
+          name: {{plato.nombre}}
+        </li>
+        <li>
+          description: {{plato.precio}
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
