se agregan mesas

--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -12,6 +12,12 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="/plato/create" router link active="active">Plato Create</a>
           </li>
+          <li class="nav-item active">
+            <a class="nav-link" routerLink="/mesa" router link active="active">Mesas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/mesa/create" router link active="active">Mesa Create</a>
+          </li>
         </ul>
       </div>
     </div>
