--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <h1 class="title">RESTION</h1>
 <div class="centered">
-    <button class="btn btn-primary btn-block homebtn" routerLink="/mesas" router link active="active">
+    <button class="btn btn-primary btn-block homebtn" routerLink="/gestionMesas" router link active="active">
       Mesero
     </button>
     <button class="btn btn-primary btn-block homebtn" routerLink="/menuSupervisor" router link active="active">
