--- a/client/src/app/components/plato-form/plato-form.component.html
+++ b/client/src/app/components/plato-form/plato-form.component.html
@@ -10,6 +10,9 @@
           <div class="form-group">
             <input type="text" name="price" [(ngModel)]="plato.precio" class="form-control" placeholder="Precio">
           </div>
+          <div class="form-group">
+            <input type="text" name="imagen" [(ngModel)]="plato.imagen" class="form-control" placeholder="Imagen">
+          </div>
           <button type="submit" class="btn btn-primary btn-block" style="border-color: rgb(31, 34, 34);">
             Guardar
           </button>
