--- a/client/src/app/components/gestion-mesa/gestion-mesa.component.html
+++ b/client/src/app/components/gestion-mesa/gestion-mesa.component.html
@@ -9,6 +9,9 @@
           Precio: {{plato.precio}}
         </li>
       </ul>
+      <div class="col-md-4">
+        <img [src]="plato.imagen" class="card-img">
+      </div>
       <button type="submit" class="btn btn-primary btn-block" (click)="selectPlato(plato!)">
         Seleccionar
       </button>
