se eliminan platos de la mesa

--- a/client/src/app/components/gestion-mesa/gestion-mesa.component.html
+++ b/client/src/app/components/gestion-mesa/gestion-mesa.component.html
@@ -15,6 +15,9 @@
       <button type="submit" class="btn btn-primary btn-block" (click)="selectPlato(plato!)">
         Seleccionar
       </button>
+      <button type="submit" class="btn btn-primary btn-block" (click)="deletePlato(plato!)">
+        Eliminar
+      </button>
     </div>
   </div>
 </div>
