--- a/client/src/app/components/gestion-mesa/gestion-mesa.component.html
+++ b/client/src/app/components/gestion-mesa/gestion-mesa.component.html
@@ -25,4 +25,7 @@
     Volver
   </button>
 </div>
-
+<div><button class="btn btn-primary btn-block" (click)="cobrar()" style="border-color: rgb(31, 34, 34); width: 250px;">
+  Cobrar
+</button>
+</div>
