--- a/client/src/app/components/home/home.component.css
+++ b/client/src/app/components/home/home.component.css
@@ -27,3 +27,10 @@ justify-content: center;
   font-family: fangsong;
   font-size: 91px;
 }
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 15%;
+}
