--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -7,6 +7,6 @@
       Supervisor
     </button>
 </div>
-<img src="https://c.tenor.com/bkJxYJ_AvxcAAAAC/jesus-dancing.gif"> 
+<img src="https://c.tenor.com/bkJxYJ_AvxcAAAAC/jesus-dancing.gif" class="center">> 
 
 
