se arreglan los router links, ahora el volver funciona con ruta estatica y no con goback

--- a/client/src/app/components/gestion-mesas/gestion-mesas.component.css
+++ b/client/src/app/components/gestion-mesas/gestion-mesas.component.css
@@ -1,5 +1,5 @@
 .box {
-  width: 70%;
+  width: 60%;
   height: 500px;
   background: rgb(46, 44, 44);
   border: 1px solid #000;
@@ -8,10 +8,19 @@
 }
 .centered {
   display: flex;
+  height: 500px;
+  padding: 10px;
   align-items: center;
   justify-content: center;
 }
 .mat-grid-tile {
   background:goldenrod;
   color: #000;
+}
+.btn{
+  display: flex;
+  height: 40px;
+  width: 30px;
+  align-items: center;
+  justify-content: center;
 }
