--- a/client/src/app/components/mesa-list/mesa-list.component.html
+++ b/client/src/app/components/mesa-list/mesa-list.component.html
@@ -1,6 +1,6 @@
 <div id="outer">
   <div class="inner"><button class="btn btn-primary btn-block" routerLink="/mesa/create" router link active="active" style="border-color: rgb(31, 34, 34); width: 250px;">Crear</button></div>
-  <div class="inner"><button class="btn btn-primary btn-block" (click)="goBack()" style="border-color: rgb(31, 34, 34); width: 250px;">Volver</button></div>
+  <div class="inner"><button class="btn btn-primary btn-block" routerLink="/menuSupervisor" router link active="active" style="border-color: rgb(31, 34, 34); width: 250px;">Volver</button></div>
 </div>
 
 <div *ngFor="let mesa of mesas" class="card card-body mb-5">
