WIP refactor estetico

--- a/client/src/app/components/gestion-mesas/gestion-mesas.component.css
+++ b/client/src/app/components/gestion-mesas/gestion-mesas.component.css
@@ -2,20 +2,22 @@
   width: 60%;
   height: 500px;
   background: rgb(46, 44, 44);
-  border: 1px solid #000;
+  border: 1px solid rgb(70, 69, 69);
   margin-top: 30px;
   margin-bottom: 20px;
+  padding: 15px;
+  border-radius: 8px;
 }
 .centered {
   display: flex;
-  height: 500px;
   padding: 10px;
   align-items: center;
   justify-content: center;
 }
 .mat-grid-tile {
-  background:goldenrod;
-  color: #000;
+  background: #435b5e;
+  color: #fff;
+  border-radius: 8px;
 }
 .btn{
   display: flex;
