--- a/client/src/app/components/home/home.component.css
+++ b/client/src/app/components/home/home.component.css
@@ -22,7 +22,7 @@ justify-content: center;
 .title {
   text-align: center;
   color: aliceblue;
-  padding: 0.75rem 1rem calc(54px - 0.75rem - 30px);
+  padding: 50px;
   margin: 30px;
   font-family: fangsong;
   font-size: 91px;
