--- a/client/src/app/components/mesa-list/mesa-list.component.html
+++ b/client/src/app/components/mesa-list/mesa-list.component.html
@@ -1,26 +1,25 @@
 <div class="row centered">
   <div class="column"><button class="btn btn-primary btn-block homebtn" routerLink="/mesa/create" router link
       active="active">Crear</button></div>
-  <div class="column" style="overflow: auto; max-height: 550px;">
-    <div *ngFor="let mesa of mesas" class="card card-body mb-5">
-      <div class="box">
-        <div class="col-md-8" style="display:flex;">
+  <div class="column" style="overflow: auto; max-height: 550px; width: 350px">
+    <div *ngFor="let mesa of mesas">
+      <div class="box" style="display: flex; justify-content: center;">
+        <div>
           <ul>
             <li>
-              Mesa Nro. : {{mesa.numeroDeMesa}}
+              Mesa # {{mesa.numeroDeMesa}}
             </li>
             <li>
-              Ubicacion : {{mesa.ubicacion}}
+              Ubicación: {{mesa.ubicacion}}
             </li>
             <li>
-              Toltal consumido : {{mesa.total}}
+              Total consumido: {{mesa.total}}
             </li>
           </ul>
-          <div class="inner"><button type="submit" class="btn btn-primary btn-block" (click)="deleteMesa(mesa._id!)"
-              style="border-color: rgb(31, 34, 34); width: 120px;">Eliminar</button></div>
-          <div class="inner"><button class="btn btn-secondary" [routerLink]="['/mesa/edit', mesa._id]"
-              style="width: 120px">Editar</button>
-          </div>
+          <div style="display: flex;"><button type="submit" class="btn btn-primary btn-block" (click)="deleteMesa(mesa._id!)"
+              style="border-color: rgb(31, 34, 34); width: 120px;">Eliminar</button>
+              <button class="btn btn-secondary" [routerLink]="['/mesa/edit', mesa._id]"
+              style="width: 120px">Editar</button></div>
         </div>
       </div>
     </div>
