--- a/client/src/app/components/gestion-eliminar-producto/gestion-eliminar-producto.component.html
+++ b/client/src/app/components/gestion-eliminar-producto/gestion-eliminar-producto.component.html
@@ -1,38 +1,11 @@
-<div id="outer">
-    <div class="inner"><button class="btn btn-primary btn-block" (click)="goBack()" style="border-color: rgb(31, 34, 34); width: 250px;">Volver</button></div>
-  </div>
-  
-  <div class="row">
-    <div class="col-md-8">
-  
-  <div *ngFor="let plato of mesa.platos">
-    <div class="row">
-      <div class="col-md-8">
-        <ul>
-          <li>
-            Nombre: {{plato.nombre}}
-          </li>
-          <li>
-            Precio: {{plato.precio}}
-          </li>
-        </ul>
-        <div class="col-md-8">
-          <img [src]="plato.imagen" class="card-img">
-        </div>
-  
-        <div class="inner"><button type="submit" class="btn btn-primary btn-block" (click)="deletePlato(plato!)" style="width: 140px;">Eliminar plato</button></div>
-      </div>
-    </div>
-  </div>
-  </div>
-  
-  <div class="col-md-4">
+<div class="row centered">
+  <div class="column">
     <div id="register">
       <div id="ticket">
         <h1>TICKET</h1>
         <h2>RESTION</h2>
         <h3>CUIT: 023265487456</h3>
-    
+
         <table>
         <tbody id="entries">
           <div *ngFor="let plato of mesa.platos">
@@ -56,3 +29,34 @@
       </table>
     </div>
   </div>
+  </div>
+  <div class="column" style="overflow: auto; max-height: 550px;">
+    <div *ngFor="let plato of mesa.platos">
+      <div class="box">
+        <div class="col-md-8" style="display:flex;">
+          <div>
+          <ul style="min-height: 59px;">
+            <li>
+              {{plato.nombre}}
+            </li>
+            <li>
+              $ {{plato.precio}}
+            </li>
+          </ul>
+          <div><button class="btn btn-secondary" [routerLink]="['/plato/edit', plato._id]"
+            style="width: 120px">Editar</button></div>
+          </div>
+          <div style="margin-left: 18px;"><div class="image">
+            <img [src]="plato.imagen" class="card-img" style="height: 76px">
+          </div>
+
+          <div><button type="submit" class="btn btn-primary btn-block" (click)="deletePlato(plato!)" style="width: 140px;">Eliminar plato</button></div></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="column"><div class="inner"><button class="btn btn-primary btn-block homebtn" (click)="goBack()" style="border-color: rgb(31, 34, 34); width: 250px;">Volver</button></div></div>
+</div>
+
+
