--- a/client/src/app/components/gestion-mesa/gestion-mesa.component.html
+++ b/client/src/app/components/gestion-mesa/gestion-mesa.component.html
@@ -1,60 +1,62 @@
+<div class="row centered">
+  <div class="column">
+    <div id="register">
+      <div id="ticket">
+        <h1>TICKET</h1>
+        <h2>RESTION</h2>
+        <h3>CUIT: 023265487456</h3>
 
-<div id="outer">
-  <div class="inner"><button class="btn btn-primary btn-block" (click)="cobrar()"  style="border-color: rgb(31, 34, 34); width: 250px;">Cobrar</button></div>
-  <div class="inner"><button class="btn btn-primary btn-block" (click)="goBack()" style="border-color: rgb(31, 34, 34); width: 250px;">Volver</button></div>
-</div>
-
-<div class="row">
-  <div class="col-md-8">
-
-<div *ngFor="let plato of platos">
-  <div class="row">
-    <div class="col-md-8">
-      <ul>
-        <li>
-          Nombre: {{plato.nombre}}
-        </li>
-        <li>
-          Precio: {{plato.precio}}
-        </li>
-      </ul>
-      <div class="col-md-8">
-        <img [src]="plato.imagen" class="card-img">
-      </div>
-
-      <div class="inner"><button type="submit" class="btn btn-primary btn-block" (click)="selectPlato(plato!)" style="width: 140px;">Agregar plato</button></div>
-    </div>
-  </div>
-</div>
-</div>
-
-<div class="col-md-4">
-  <div id="register">
-    <div id="ticket">
-      <h1>TICKET</h1>
-      <h2>RESTION</h2>
-      <h3>CUIT: 023265487456</h3>
-  
-      <table>
-      <tbody id="entries">
-        <div *ngFor="let plato of mesa.platos">
-          <div class="row">
-            <div class="col-md-4">
-              <ul>
-                <li>
-                  {{plato.nombre}}.........$ {{plato.precio}}
-                </li>
-              </ul>
+        <table>
+        <tbody id="entries">
+          <div *ngFor="let plato of mesa.platos">
+            <div class="row">
+              <div class="col-md-4">
+                <ul>
+                  <li>
+                    {{plato.nombre}}.........$ {{plato.precio}}
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
-        </div>
-      </tbody>
-    <tfoot>
-      <tr>
-          <th>Total</th>
-          <th id="total"> $ {{mesa.total}}</th>
-      </tr>
-    </tfoot>
-    </table>
+        </tbody>
+      <tfoot>
+        <tr>
+            <th>Total</th>
+            <th id="total"> $ {{mesa.total}}</th>
+        </tr>
+      </tfoot>
+      </table>
+    </div>
   </div>
+  </div>
+  <div class="column" style="overflow: auto; max-height: 550px;">
+    <div *ngFor="let plato of platos">
+      <div class="box">
+        <div class="col-md-8" style="display:flex;">
+          <div>
+          <ul style="min-height: 59px;">
+            <li>
+              {{plato.nombre}}
+            </li>
+            <li>
+              $ {{plato.precio}}
+            </li>
+          </ul>
+          <div><button class="btn btn-secondary" [routerLink]="['/plato/edit', plato._id]"
+            style="width: 120px">Editar</button></div>
+          </div>
+          <div style="margin-left: 18px;"><div class="image">
+            <img [src]="plato.imagen" class="card-img" style="height: 76px">
+          </div>
+
+          <div><button type="submit" class="btn btn-primary btn-block" (click)="selectPlato(plato!)" style="width: 140px;">Agregar plato</button></div></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="column"><div class="inner"><button class="btn btn-primary btn-block homebtn" (click)="goBack()" style="border-color: rgb(31, 34, 34); width: 250px;">Volver</button></div></div>
 </div>
+
+
