sacar la edicion del meserio

--- a/client/src/app/components/gestion-mesa/gestion-mesa.component.html
+++ b/client/src/app/components/gestion-mesa/gestion-mesa.component.html
@@ -43,8 +43,8 @@
               $ {{plato.precio}}
             </li>
           </ul>
-          <div><button class="btn btn-secondary" [routerLink]="['/plato/edit', plato._id]"
-            style="width: 120px">Editar</button></div>
+          <!--<div><button class="btn btn-secondary" [routerLink]="['/plato/edit', plato._id]"
+            style="width: 120px">Editar</button></div>-->
           </div>
           <div style="margin-left: 18px;"><div class="image">
             <img [src]="plato.imagen" class="card-img" style="height: 76px">
