mas cambios esteticos

--- a/client/src/app/components/gestion-mesas/gestion-mesas.component.html
+++ b/client/src/app/components/gestion-mesas/gestion-mesas.component.html
@@ -4,7 +4,7 @@
       <mat-grid-tile *ngFor="let mesa of mesas" [colspan]="1" [rowspan]="1">
 
         <div style="text-align: center;">
-          Mesa {{mesa.numeroDeMesa}}
+          Mesa # {{mesa.numeroDeMesa}}
           <br>Total
           <br>${{mesa.total}}
         </div>
