ultimos cambios esteticos

--- a/client/src/app/components/mesa-form/mesa-form.component.html
+++ b/client/src/app/components/mesa-form/mesa-form.component.html
@@ -1,5 +1,7 @@
-<div class="row">
-  <div class="col-sm-6 offset-sm-3">
+<div class="row centered" style="height: 590px;
+max-width: 100%;
+">
+  <div class="col-sm-6">
     <div class="card card-body" style="margin: 30px;">
       <h1 style="color:antiquewhite; text-align: center;">Edición Mesas</h1>
       <form (submit)="edit ? updateMesa() : submitMesa()">
