--- a/client/src/app/components/plato-list/plato-list.component.html
+++ b/client/src/app/components/plato-list/plato-list.component.html
@@ -1,7 +1,9 @@
-<div class="row centered">
+<div class="row centered" style="
+max-width: 100%;
+">
   <div class="column"><button class="btn btn-primary btn-block homebtn" routerLink="/plato/create" router link
       active="active">Crear</button></div>
-  <div class="column" style="overflow: auto; max-height: 550px;">
+  <div class="column" style="overflow: auto; max-height: 600px;">
     <div *ngFor="let plato of platos">
       <div class="box">
         <div class="col-md-8" style="display:flex;">
