--- a/client/src/app/components/gestion-mesas/gestion-mesas.component.css
+++ b/client/src/app/components/gestion-mesas/gestion-mesas.component.css
@@ -1,12 +1,13 @@
 .box {
   width: 60%;
-  height: 500px;
+  height: 514px;
   background: rgb(46, 44, 44);
   border: 1px solid rgb(70, 69, 69);
   margin-top: 30px;
-  margin-bottom: 20px;
+  margin-bottom: 8px;
   padding: 15px;
   border-radius: 8px;
+  overflow: auto;
 }
 .centered {
   display: flex;
@@ -19,7 +20,7 @@
   color: #fff;
   border-radius: 8px;
 }
-.btn{
+.btn {
   display: flex;
   height: 40px;
   width: 30px;
